<resources>
    <string name="app_name">Brain Focus X</string>
    <string name="current_time">6:02:00</string>
    <string name="timer">23:00</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="work_session">Work</string>
    <string name="stop_session">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="reminder_notification_title_template">Reminder: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="reminder_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="channel_name">Pomo notifications</string>
    <string name="channel_description">This is Channel 1</string>
    <string name="target_time">Target: 5:25</string>
    <string name="alarm_canceled">Alarm canceled</string>
    <string name="no_alarm_set">You\'re not Focus</string>
    <string name="focus_until">Focus Until: </string>
    <string name="auto_fixed">Auto</string>
</resources>
